# Code-Exercises

./: .gitignore  fill_string.py  json_parser.py
Asearch/: input1  input2  pacman.cc  pacman_output
android_cache/: common.py  entry.py  index.py  m509.py  response_info.py
blockchain/: kyber.js  package.json  wallet.js
blog/: floating-point.js  mem-alloc.js
blog/fbthrift/: .gitignore  CMakeLists.txt  ExampleHandler.h  Makefile  README.md  example.thrift  main.cc
blog/fbthrift/client/: CMakeLists.txt  test.cc  test_future.cc
blog/libevent/server/: CMakeLists.txt  basic_server.cpp  config_socket_server.cpp  echo_server.cpp
botbuilding/: botclean.py  saveprincess.py  saveprincess2.py
codeforces/: 108B.hs  108B.py  108C.hs  108D.hs  108D_2.hs  108D_3.hs  114A.hs  116A.hs  116A_oneline.hs  95A.hs  95A_2.hs  96A.hs  96B.hs  96B_ans.hs  tools.hs
codejam/: store_credit.cpp
codility/: Algorithm.java  BalanceString.java  BigFish.java  Bracket.java  EquiLeader.java  Factor.java  Flags.java  Leader.java  MaxDoubleSlice.java  MaxProfit.java  MinMaxDivision.java  MinPerimeterRectangle.java  Peaks.java  StoneWall.java  distinct_intersection.py  max_counters.py  max_triplet.py  min_avg_two_slice.py  triangle_triplet.py
concurrency/: MyArrayList.java  pom.xml  run.sh
deeplearning/: lstm_bigram_char_predict.py  lstm_char_predict.py  lstm_eff_char_predict.py  lstm_embeding_char_predict.py  notminst.py  notminst_opt.py  notmnist_simple.py  notmnist_tensor.py  plot_iris_logistic.py  requirements.txt  softmax.py  vietai_test.py  word2vec_cbow.py  word2vec_skipgram.py
fb_hackathon/: max_two.py
functional/: compile-all.hs  compile-all2  compile-all2.hs  compile-final  compile-final.hs  fibonacci  fibonacci-tail  fibonacci-tail.hs  fibonacci.hs  fp-update-list.hs  gcd  gcd.hs  graham-scan  graham-scan.hs  helloworld.hs  legendary.hs  miscell  miscell.c  pascal-tri  pbcoby  replicateList.hs  sierpinski-triangle  sierpinski-triangle.hs  takeodd.hs  test  test.hs
hackercup17/: fight_zombie.py  fight_zombie_dynamic.py  fighting_the_zombie.txt  input4  input5  lazy_loading.py  out  test.py  (+9 more)
(+223 files in other folders)
